Afficher un textView quand l'activité "activity_cycle" est visible. Afficher un message (ici les états du cycle de vie de l'activité) dans les logs. Afficher un toast quand l'activité est complètement détruite ("destroy")

--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -12,15 +12,15 @@
         android:layout_width="79dp"
         android:layout_height="19dp"
         android:layout_marginStart="90dp"
-        android:layout_marginTop="2dp"
-        android:layout_marginEnd="63dp"
-        android:layout_marginBottom="171dp"
+        android:layout_marginTop="482dp"
+        android:layout_marginEnd="242dp"
+        android:layout_marginBottom="230dp"
         android:text="Permissions"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/textView5"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/button_tel"
+        app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.0" />
 
     <TextView
@@ -28,71 +28,81 @@
         android:layout_width="89dp"
         android:layout_height="34dp"
         android:layout_marginStart="161dp"
+        android:layout_marginTop="200dp"
         android:layout_marginEnd="161dp"
+        android:layout_marginBottom="16dp"
         android:text="Bonjour"
         android:textSize="24sp"
-        app:layout_constraintBottom_toTopOf="@+id/button_save"
+        app:layout_constraintBottom_toTopOf="@+id/button_cycle"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.916" />
+        app:layout_constraintVertical_bias="1.0" />
 
     <ImageView
         android:id="@+id/isen_view"
         android:layout_width="119dp"
         android:layout_height="125dp"
-        android:layout_marginStart="161dp"
-        android:layout_marginEnd="161dp"
-        android:layout_marginBottom="16dp"
+        android:layout_marginStart="146dp"
+        android:layout_marginTop="59dp"
+        android:layout_marginEnd="146dp"
         android:background="@drawable/isen"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:contentDescription="Image Isen logo"
+        app:layout_constraintBottom_toTopOf="@+id/textView"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.1" />
+        app:layout_constraintVertical_bias="0.0" />
 
     <TextView
         android:id="@+id/textView2"
         android:layout_width="75dp"
         android:layout_height="19dp"
-        android:layout_marginStart="90dp"
-        android:layout_marginTop="2dp"
+        android:layout_marginStart="86dp"
+        android:layout_marginTop="332dp"
+        android:layout_marginEnd="250dp"
+        android:layout_marginBottom="380dp"
         android:text="Cycle de vie"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/button_message"
+        app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.0" />
 
     <TextView
         android:id="@+id/textView5"
         android:layout_width="81dp"
         android:layout_height="19dp"
-        android:layout_marginTop="2dp"
-        android:layout_marginEnd="75dp"
-        android:layout_marginBottom="171dp"
+        android:layout_marginStart="240dp"
+        android:layout_marginTop="482dp"
+        android:layout_marginEnd="90dp"
+        android:layout_marginBottom="230dp"
         android:text="Webservices"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.945"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/button_download"
+        app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.0" />
 
     <ImageButton
-        android:id="@+id/button_tel"
+        android:id="@+id/button_permission"
         android:layout_width="79dp"
         android:layout_height="83dp"
         android:layout_marginStart="90dp"
         android:layout_marginTop="400dp"
-        android:layout_marginEnd="74dp"
+        android:layout_marginEnd="242dp"
+        android:layout_marginBottom="248dp"
         android:background="#D32F2F"
         android:scaleType="fitXY"
         android:tint="#FFFFFF"
+        android:contentDescription="Bouton de permissions"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/button_download"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/button_web"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
@@ -100,34 +110,40 @@
         app:srcCompat="@drawable/phone_white" />
 
     <ImageButton
-        android:id="@+id/button_download"
+        android:id="@+id/button_web"
         android:layout_width="79dp"
         android:layout_height="83dp"
-        android:layout_marginStart="74dp"
-        android:layout_marginTop="400dp"
-        android:layout_marginEnd="90dp"
+        android:layout_marginStart="243dp"
+        android:layout_marginTop="401dp"
+        android:layout_marginEnd="89dp"
+        android:layout_marginBottom="246dp"
         android:background="#D32F2F"
         android:scaleType="fitXY"
         android:tint="#FFFFFF"
+        android:contentDescription="Bouton de WebServices"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toEndOf="@+id/textView4"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.0"
+        app:layout_constraintVertical_bias="0.004"
         app:srcCompat="@drawable/inbox" />
 
     <ImageButton
-        android:id="@+id/button_message"
+        android:id="@+id/button_cycle"
         android:layout_width="79dp"
         android:layout_height="83dp"
         android:layout_marginStart="90dp"
         android:layout_marginTop="250dp"
-        android:layout_marginEnd="75dp"
+        android:layout_marginEnd="242dp"
+        android:layout_marginBottom="398dp"
         android:background="#D32F2F"
         android:scaleType="fitXY"
         android:tint="#FFFFFF"
+        android:contentDescription="Bouton de cycle de vie"
         app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/button_save"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
@@ -139,13 +155,14 @@
         android:id="@+id/button_save"
         android:layout_width="79dp"
         android:layout_height="83dp"
-        android:layout_marginTop="250dp"
+        android:layout_marginStart="250dp"
+        android:layout_marginTop="251dp"
         android:layout_marginEnd="90dp"
-        android:layout_marginBottom="328dp"
         android:background="#D32F2F"
+        android:contentDescription="Bouton de sauvegarde"
         android:scaleType="fitXY"
         android:tint="#FFFFFF"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/button_web"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
@@ -155,16 +172,16 @@
 
     <TextView
         android:id="@+id/Sauvegarde"
-        android:layout_width="89dp"
-        android:layout_height="27dp"
-        android:layout_marginStart="84dp"
-        android:layout_marginTop="2dp"
-        android:layout_marginEnd="104dp"
+        android:layout_width="81dp"
+        android:layout_height="17dp"
+        android:layout_marginStart="250dp"
+        android:layout_marginEnd="75dp"
+        android:layout_marginBottom="380dp"
         android:text="Sauvegarde"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.193"
-        app:layout_constraintStart_toEndOf="@+id/textView2"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/button_save"
         app:layout_constraintVertical_bias="0.0" />
 
