--- a/app/src/main/res/layout/activity_cycle.xml
+++ b/app/src/main/res/layout/activity_cycle.xml
@@ -33,7 +33,7 @@
         app:layout_constraintVertical_bias="0.6" />
 
     <TextView
-        android:id="@+id/log_view"
+        android:id="@+id/logView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="205dp"
