--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -8,7 +8,7 @@
     tools:context=".HomeActivity">
 
     <TextView
-        android:id="@+id/textView4"
+        android:id="@+id/textPermission"
         android:layout_width="79dp"
         android:layout_height="19dp"
         android:layout_marginStart="90dp"
@@ -24,7 +24,7 @@
         app:layout_constraintVertical_bias="0.0" />
 
     <TextView
-        android:id="@+id/textView"
+        android:id="@+id/textTitre"
         android:layout_width="89dp"
         android:layout_height="34dp"
         android:layout_marginStart="161dp"
@@ -33,7 +33,7 @@
         android:layout_marginBottom="16dp"
         android:text="Bonjour"
         android:textSize="24sp"
-        app:layout_constraintBottom_toTopOf="@+id/button_cycle"
+        app:layout_constraintBottom_toTopOf="@+id/buttonCycle"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
@@ -41,7 +41,7 @@
         app:layout_constraintVertical_bias="1.0" />
 
     <ImageView
-        android:id="@+id/isen_view"
+        android:id="@+id/isenLogo"
         android:layout_width="119dp"
         android:layout_height="125dp"
         android:layout_marginStart="146dp"
@@ -49,7 +49,7 @@
         android:layout_marginEnd="146dp"
         android:background="@drawable/isen"
         android:contentDescription="Image Isen logo"
-        app:layout_constraintBottom_toTopOf="@+id/textView"
+        app:layout_constraintBottom_toTopOf="@+id/textTitre"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
@@ -57,7 +57,7 @@
         app:layout_constraintVertical_bias="0.0" />
 
     <TextView
-        android:id="@+id/textView2"
+        android:id="@+id/textCycle"
         android:layout_width="75dp"
         android:layout_height="19dp"
         android:layout_marginStart="86dp"
@@ -73,7 +73,7 @@
         app:layout_constraintVertical_bias="0.0" />
 
     <TextView
-        android:id="@+id/textView5"
+        android:id="@+id/textWeb"
         android:layout_width="81dp"
         android:layout_height="19dp"
         android:layout_marginStart="240dp"
@@ -89,7 +89,7 @@
         app:layout_constraintVertical_bias="0.0" />
 
     <ImageButton
-        android:id="@+id/button_permission"
+        android:id="@+id/buttonPermission"
         android:layout_width="79dp"
         android:layout_height="83dp"
         android:layout_marginStart="90dp"
@@ -102,7 +102,7 @@
         android:tint="#FFFFFF"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/button_web"
+        app:layout_constraintEnd_toStartOf="@+id/buttonWeb"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
@@ -110,7 +110,7 @@
         app:srcCompat="@drawable/phone_white" />
 
     <ImageButton
-        android:id="@+id/button_web"
+        android:id="@+id/buttonWeb"
         android:layout_width="79dp"
         android:layout_height="83dp"
         android:layout_marginStart="243dp"
@@ -124,14 +124,14 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintStart_toEndOf="@+id/textView4"
+        app:layout_constraintStart_toEndOf="@+id/textWeb"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.004"
         app:srcCompat="@drawable/inbox" />
 
     <ImageButton
-        android:id="@+id/button_cycle"
+        android:id="@+id/buttonCycle"
         android:layout_width="79dp"
         android:layout_height="83dp"
         android:layout_marginStart="90dp"
@@ -144,7 +144,7 @@
         android:tint="#FFFFFF"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/button_save"
+        app:layout_constraintEnd_toStartOf="@+id/buttonSave"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
@@ -152,7 +152,7 @@
         app:srcCompat="@drawable/comment" />
 
     <ImageButton
-        android:id="@+id/button_save"
+        android:id="@+id/buttonSave"
         android:layout_width="79dp"
         android:layout_height="83dp"
         android:layout_marginStart="250dp"
@@ -162,7 +162,7 @@
         android:contentDescription="Bouton de sauvegarde"
         android:scaleType="fitXY"
         android:tint="#FFFFFF"
-        app:layout_constraintBottom_toTopOf="@+id/button_web"
+        app:layout_constraintBottom_toTopOf="@+id/buttonWeb"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
@@ -182,7 +182,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/button_save"
+        app:layout_constraintTop_toBottomOf="@+id/buttonSave"
         app:layout_constraintVertical_bias="0.0" />
 
     <ImageButton
@@ -195,7 +195,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintStart_toEndOf="@+id/isen_view"
+        app:layout_constraintStart_toEndOf="@+id/isenLogo"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.0"
         app:srcCompat="@android:drawable/ic_lock_power_off" />
