Modification du code (normes de codage): changement des noms des id, des variables, utilisation du fichier strings.xml pour les string, etc... suite

--- a/app/src/main/res/layout/activity_cycle.xml
+++ b/app/src/main/res/layout/activity_cycle.xml
@@ -23,7 +23,7 @@
         android:layout_marginTop="250dp"
         android:layout_marginEnd="115dp"
         android:layout_marginBottom="513dp"
-        android:text="Charger un fragment de texte"
+        android:text="@string/texte_fragment_button"
         android:textAllCaps="false"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -40,7 +40,7 @@
         android:layout_marginTop="250dp"
         android:layout_marginEnd="206dp"
         android:layout_marginBottom="356dp"
-        android:text="coucou"
+        android:text="@string/texte_test"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.489"
