--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -15,7 +15,7 @@
         android:layout_marginTop="482dp"
         android:layout_marginEnd="242dp"
         android:layout_marginBottom="230dp"
-        android:text="Permissions"
+        android:text="@string/texte_permissions"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
@@ -31,7 +31,7 @@
         android:layout_marginTop="200dp"
         android:layout_marginEnd="161dp"
         android:layout_marginBottom="16dp"
-        android:text="Bonjour"
+        android:text="@string/bonjour"
         android:textSize="24sp"
         app:layout_constraintBottom_toTopOf="@+id/buttonCycle"
         app:layout_constraintEnd_toEndOf="parent"
@@ -48,7 +48,7 @@
         android:layout_marginTop="59dp"
         android:layout_marginEnd="146dp"
         android:background="@drawable/isen"
-        android:contentDescription="Image Isen logo"
+        android:contentDescription="@string/desc_logo"
         app:layout_constraintBottom_toTopOf="@+id/textTitre"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
@@ -64,7 +64,7 @@
         android:layout_marginTop="332dp"
         android:layout_marginEnd="250dp"
         android:layout_marginBottom="380dp"
-        android:text="Cycle de vie"
+        android:text="@string/texte_cycle"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
@@ -80,7 +80,7 @@
         android:layout_marginTop="482dp"
         android:layout_marginEnd="90dp"
         android:layout_marginBottom="230dp"
-        android:text="Webservices"
+        android:text="@string/texte_web"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
@@ -97,7 +97,7 @@
         android:layout_marginEnd="242dp"
         android:layout_marginBottom="248dp"
         android:background="#D32F2F"
-        android:contentDescription="Bouton de permissions"
+        android:contentDescription="@string/desc_bouton_permission"
         android:scaleType="fitXY"
         android:tint="#FFFFFF"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -118,7 +118,7 @@
         android:layout_marginEnd="89dp"
         android:layout_marginBottom="246dp"
         android:background="#D32F2F"
-        android:contentDescription="Bouton de WebServices"
+        android:contentDescription="@string/desc_bouton_web"
         android:scaleType="fitXY"
         android:tint="#FFFFFF"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -139,7 +139,7 @@
         android:layout_marginEnd="242dp"
         android:layout_marginBottom="398dp"
         android:background="#D32F2F"
-        android:contentDescription="Bouton de cycle de vie"
+        android:contentDescription="@string/desc_bouton_cycle"
         android:scaleType="fitXY"
         android:tint="#FFFFFF"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -159,7 +159,7 @@
         android:layout_marginTop="251dp"
         android:layout_marginEnd="90dp"
         android:background="#D32F2F"
-        android:contentDescription="Bouton de sauvegarde"
+        android:contentDescription="@string/save_texte"
         android:scaleType="fitXY"
         android:tint="#FFFFFF"
         app:layout_constraintBottom_toTopOf="@+id/buttonWeb"
@@ -177,7 +177,7 @@
         android:layout_marginStart="250dp"
         android:layout_marginEnd="75dp"
         android:layout_marginBottom="380dp"
-        android:text="Sauvegarde"
+        android:text="@string/save_texte"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
@@ -192,6 +192,7 @@
         android:layout_marginTop="100dp"
         android:layout_marginEnd="28dp"
         android:layout_marginBottom="617dp"
+        android:contentDescription="@string/desc_disconnect"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
