--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -13,7 +13,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:background="#F44336"
-        android:text="Valider"
+        android:text="@string/texte_valider"
         android:textColor="#FDFCFC"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -27,7 +27,7 @@
         android:id="@+id/myTitleCo"
         android:layout_width="103dp"
         android:layout_height="33dp"
-        android:text="CONNEXION"
+        android:text="@string/title_co_texte"
         android:textAlignment="center"
         android:textSize="18sp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -40,7 +40,7 @@
         android:id="@+id/myIdent"
         android:layout_width="300dp"
         android:layout_height="50dp"
-        android:hint="Identifiant"
+        android:hint="@string/ident_texte"
         android:textColorHint="#808080"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -53,7 +53,7 @@
         android:id="@+id/myPass"
         android:layout_width="300dp"
         android:layout_height="50dp"
-        android:hint="Mot de passe"
+        android:hint="@string/texte_mdp"
         android:inputType="textPassword"
         android:textColorHint="#808080"
         app:layout_constraintBottom_toBottomOf="parent"
