--- a/app/src/main/res/layout/activity_storage.xml
+++ b/app/src/main/res/layout/activity_storage.xml
@@ -10,7 +10,7 @@
         android:id="@+id/dateTitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Date:"
+        android:text="@string/texte_date"
         android:textSize="18sp"
         app:layout_constraintBottom_toTopOf="@+id/save"
         app:layout_constraintEnd_toStartOf="@+id/date"
@@ -23,7 +23,7 @@
         android:id="@+id/lastName"
         android:layout_width="300dp"
         android:layout_height="50dp"
-        android:hint="Nom"
+        android:hint="@string/texte_nom"
         android:textColorHint="#52afaa"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -36,7 +36,7 @@
         android:id="@+id/firstName"
         android:layout_width="300dp"
         android:layout_height="50dp"
-        android:hint="Prénom"
+        android:hint="@string/texte_prenom"
         android:textColorHint="#52afaa"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -50,7 +50,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="216dp"
-        android:text="../../.."
+        android:text="@string/date_non_select"
         android:textSize="18sp"
         app:layout_constraintBottom_toTopOf="@+id/save"
         app:layout_constraintEnd_toEndOf="parent"
@@ -69,7 +69,7 @@
         android:layout_marginBottom="307dp"
         android:background="@color/colorPrimary"
         android:padding="8dp"
-        android:text="Sauvegarde"
+        android:text="@string/save_texte"
         android:textColor="@android:color/white"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -88,7 +88,7 @@
         android:layout_marginBottom="229dp"
         android:background="@color/colorPrimary"
         android:padding="8dp"
-        android:text="Lecture"
+        android:text="@string/read_texte"
         android:textColor="@android:color/white"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -105,7 +105,7 @@
         android:layout_marginTop="58dp"
         android:layout_marginEnd="165dp"
         android:layout_marginBottom="654dp"
-        android:text="Informations"
+        android:text="@string/info_texte"
         android:textSize="30sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
