--- a/app/src/main/res/layout/fragment_fragment_cycle.xml
+++ b/app/src/main/res/layout/fragment_fragment_cycle.xml
@@ -7,28 +7,19 @@
     android:gravity="center"
     android:background="#D8DCF0">
 
-    <!--Button
-        android:id="@+id/fragment_main_button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="SHOW ME DETAILS !"
-        android:background="#00000000"
-        android:textColor="#FFF"
-        android:textSize="30sp"/>-->
-
     <TextView
         android:id="@+id/title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:text="Exemple de Fragment de texte : cliquez ici !" />
+        android:text="@string/exemple_fragment" />
 
     <TextView
         android:id="@+id/texte"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:gravity="center_horizontal"
-        android:text="Mon fragment"
+        android:text="@string/texte_fragment"
         android:layout_marginStart="150dp"
         android:layout_marginTop="310dp"
         android:layout_marginEnd="115dp"
