--- a/app/src/main/res/layout/activity_informations.xml
+++ b/app/src/main/res/layout/activity_informations.xml
@@ -37,6 +37,7 @@
 
     <ImageButton
         android:id="@+id/buttonPicture"
+        android:scaleType="centerInside"
         android:layout_width="80dp"
         android:layout_height="76dp"
         android:layout_marginStart="24dp"
